--- a/.gitignore
+++ b/.gitignore
@@ -3,24 +3,20 @@
 /.pnp
 .pnp.js
 
-# Testing
-/coverage
-
-# Next.js
+# Next.js Build Artifacts
 /.next/
 /out/
 
-# Production
+# Production & Testing
 /build
+/coverage
 
-# Misc
+# Local Environment Variables (CRITICAL for secrets)
+.env*.local
+
+# Misc & Debug Logs
 .DS_Store
 *.pem
-
-# Debug
 npm-debug.log*
 yarn-debug.log*
 ts-debug.log*
-
-# Local Environment Variables 
-.env*.local
